@@ -1333,4 +1333,5 @@
 	  (2015-07-04).
 	* apps/system/poweroff:  Remove the system poweroff command.  This is
 	  replaced with the NSH shutdown commandi (2015-07-02).
+	* apps/nshlib:  Add support for a uname command (2015-07-04).
 
